src/objects/ACCL__Tactic_Product__c.object
<CustomObject>
    <description>Junction Object between Tactic and Product</description>
    <fields>
        <fullName>ACCL__Classification__c</fullName>
        <description>Classification of products.</description>
        <inlineHelpText>Relevant for selectable promotions with rewards.</inlineHelpText>
        <label>Classification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ACCL__Classification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>RUB</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Default_Value__c</fullName>
        <inlineHelpText>Defines the default quantity given to the product in free item promotion reward context.</inlineHelpText>
        <label>Default Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Group_Id__c</fullName>
        <description>Defines the order of display of the group</description>
        <inlineHelpText>Defines the order of display of the group</inlineHelpText>
        <label>Group Id</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Group_Name__c</fullName>
        <description>Product register grouping drives the way that the products are displayed in the order.</description>
        <inlineHelpText>Relevant only for selectable promotions.</inlineHelpText>
        <label>Group Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Group_Sort__c</fullName>
        <description>Defines the order of display of a product within a group.</description>
        <inlineHelpText>Defines the order of display of a product within a group.</inlineHelpText>
        <label>Product Group Sort</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Included__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Lift_Pct__c</fullName>
        <label>Lift %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACCL__Max_Value__c</fullName>
        <inlineHelpText>Defines the max. quantity which can be given to the product in free item promotion reward context.</inlineHelpText>
        <label>Max Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Pct_of_Stores__c</fullName>
        <label>% of Stores</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACCL__Planned_Costs__c</fullName>
        <label>Planned Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Product__c</fullName>
        <label>Product</label>
        <referenceTo>ACCL__Product__c</referenceTo>
        <relationshipLabel>Tactic Products</relationshipLabel>
        <relationshipName>Tactic_Products</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Promoted_Price__c</fullName>
        <label>Promoted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.ACCL__record_link, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <formula>ACCL__Product__r.ACCL__Sales_Org__c</formula>
        <label>Sales Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__TacticIdProductId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique read only text field with Tactic.Id + | +  Product.Id</description>
        <label>TacticIdProductId</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCL__Tactic__c</fullName>
        <label>Tactic</label>
        <referenceTo>ACCL__Tactic__c</referenceTo>
        <relationshipLabel>Tactic Products</relationshipLabel>
        <relationshipName>Tactic_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>MDLZ_Location__c</fullName>
        <description>Stores the location for Tactic product</description>
        <label>Location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_PPG__c</fullName>
        <description>Stores the PPG for Tactic product</description>
        <label>PPG</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_Price__c</fullName>
        <description>Stores the price for Tactic product</description>
        <label>SRP</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
	<fields>
        <fullName>MDLZ_Product_ID__c</fullName>
        <formula>ACCL__Product__r.ACCL__Product_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_SubPPG__c</fullName>
        <description>Stores the Sub PPG for Tactic product</description>
        <label>Sub PPG</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Tactic Product</label>
    <nameField>
        <displayFormat>TP-{00000000}</displayFormat>
        <label>Tactic Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tactic Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Sales_Org_Mismatch</fullName>
        <active>true</active>
        <description>The Tactic and the Product must have the same Sales Org.</description>
        <errorConditionFormula>TEXT(ACCL__Tactic__r.ACCL__Tactic_Template__r.ACCL__Sales_Org__c) &lt;&gt;  ACCL__Product__r.ACCL__Sales_Org__c</errorConditionFormula>
        <errorMessage>The Tactic and the Product must have the same Sales Org.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__product_level_should_be_product</fullName>
        <active>true</active>
        <description>Only products with &apos;Product&apos; Product Level can be selected.</description>
        <errorConditionFormula>AND(
ACCL__Tactic__r.ACCL__Promotion__r.ACCL__Promotion_Template__r.ACCL__Selectable_Promotion__c = true,
NOT (ISPICKVAL(ACCL__Product__r.ACCL__Product_Level__c , &quot;Product&quot;)))</errorConditionFormula>
        <errorMessage>Only products with &apos;Product&apos; Product Level can be selected.</errorMessage>
    </validationRules>
</CustomObject>